--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <script src="Scripts/objects/scene.js"></script>
 
     <!-- Scene Scripts -->
-    <script src="Scripts/scenes/rightcave.js"></script>
-    <script src="Scripts/scenes/leftcave.js"></script>
-    <script src="Scripts/scenes/intro.js"></script>
+    <script src="Scripts/scenes/gameover.js"></script>
+    <script src="Scripts/scenes/slotmachine.js"></script>
+    <script src="Scripts/scenes/menu.js"></script>
 
     <!-- Main Game Scripts -->
     <script src="Scripts/core/game.js"></script>
