added documentation headers to all files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    File name: index.html
+    @Author: Kevin Ma
+    Student #: 300867968
+    @Date July 2, 2016
+
+    @Description: The manifest for the web slot machine game for COMP397 Assignment 3.
+
+    Version: 0.9 - added in fade in and fade out transitions for menu and slotmachine scenes
+-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
