--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ﻿<!--
-    File name: index.html
-    @Author: Kevin Ma
-    Student #: 300867968
-    @Date July 2, 2016
-
-    @Description: The manifest for the web slot machine game for COMP397 Assignment 3.
-
-    Version: 0.9 - added in fade in and fade out transitions for menu and slotmachine scenes
+    @file index.html
+    @author Kevin Ma kma45@my.centennialcollge.ca
+    @studentID 300867968
+    @date July 10, 2016
+    @description This file is the manifest for the web slot machine game for COMP397 Assignment 3
+    @version 0.18.01 - resized and centerd canvas using css
 -->
+
+<!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +23,7 @@
 </head>
 
 <body>
-    <div class="game">
+    <div class="game container-fluid">
         <canvas id="canvas" width="640" height="480"></canvas>
     </div>
 
@@ -53,3 +54,5 @@
 </body>
 
 </html>
+
+<!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
