--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     @studentID 300867968
     @date July 10, 2016
     @description This file is the manifest for the web slot machine game for COMP397 Assignment 3
-    @version 0.18.01 - resized and centerd canvas using css
+    @version 0.18.04 - added _createAndAddModal method and re-worked _resetButtonClick and _cashOutButtonClick methods
 -->
 
 <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -18,7 +18,8 @@
     <title>COMP397 - Slot Machine</title>
     <!-- CSS Section -->
     <link href="Content/reset.css" rel="stylesheet" />
-    <link href="Scripts/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" F>
+    <link href="Scripts/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Scripts/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="Content/game.css" rel="stylesheet" />
 </head>
 
